leftAside Overflow correction

--- a/src/components/leftaside/LeftAside.scss
+++ b/src/components/leftaside/LeftAside.scss
@@ -7,8 +7,8 @@
 }
 
 .container {
-    width: 310px;
-    height: 100vh;
+    width: 30%;
+    min-height: 100vh;
 
     .aside-top {
         height: 15%;
@@ -65,6 +65,20 @@
         }
 
 
+    }
+
+    .event-section {
+        overflow-y: auto;
+    }
+
+    .event-section::-webkit-scrollbar {
+        width: 7.5px;
+        background-color: #ececec;
+    }
+
+    .event-section::-webkit-scrollbar-thumb {
+        background-color: #9b9b9b;
+        border-radius: 3px;
     }
 }
 
